--- a/RSM_code.Rmd
+++ b/RSM_code.Rmd
@@ -1,11 +1,24 @@
 ---
-title: "R Notebook"
+title: "RSM Notebook"
 output: html_notebook
 ---
 
-Clear RStudio
-```{r}
+First we're going to set up R to to our target directory and clear the workspace.
+```{r setup}
+knitr::opts_knit$set(root.dir = 'C:/Users/Ryan/Google Drive/UC Davis/Publications/MFC Microbiome Paper - Experiment 15')
+knitr::opts_chunk$set(echo = TRUE,
+                      warning = FALSE, 
+                      message = FALSE,
+                      engine = "R", # Chunks will always have R code, unless noted
+                      error = TRUE,
+                      fig.path="Figures/",  # Set the figure options
+                      fig.align = "center",
+                      dev='png')
 
+```
+
+Clear RStudio
+```{r clear}
   # cat(rep("\n",50)) # Clear Console
   rm(list=ls(all=TRUE)) # clear workspace
   graphics.off() # closes all graphics
@@ -13,7 +26,7 @@ Clear RStudio
 ```
 
 Install function for needed packages
-```{r, message = FALSE, warning=FALSE}
+```{r packages function, message = FALSE, warning=FALSE}
    
   packages<-function(x){
     x<-as.character(match.call()[[2]])
@@ -26,9 +39,7 @@ Install function for needed packages
 ```
 
 
-
-
-```{r}
+```{r get data}
 # https://cran.r-project.org/web/packages/rsm/vignettes/rsm.pdf
 ChemReact
 CR1 <- coded.data(ChemReact, x1 ~ (Time - 85)/5, x2 ~ (Temp - 175)/5)
