--- a/RSM_code.Rmd
+++ b/RSM_code.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "RSM Notebook"
-output: html_notebook
+title: "RSM_code"
+output:
+  html_document: default
+  html_notebook: default
 ---
 
 First we're going to set up R to to our target directory and clear the workspace.
 ```{r setup}
-knitr::opts_knit$set(root.dir = 'C:/Users/Ryan/Google Drive/UC Davis/Publications/MFC Microbiome Paper - Experiment 15')
 knitr::opts_chunk$set(echo = TRUE,
                       warning = FALSE, 
                       message = FALSE,
@@ -39,15 +40,49 @@ Install function for needed packages
 ```
 
 
-```{r get data}
+```{r get data, message = FALSE, warning=FALSE}
 # https://cran.r-project.org/web/packages/rsm/vignettes/rsm.pdf
-ChemReact
-CR1 <- coded.data(ChemReact, x1 ~ (Time - 85)/5, x2 ~ (Temp - 175)/5)
-setwd("C:/Users/Ryan/Google Drive/R")
-CR1[1:7,]
-as.data.frame(CR1)
+packages(XLConnect)
+data <- readWorksheetFromFile("preliminary_RSM.xlsx",sheet=1)
 
-write.csv(ChemReact,"chemreact.csv")
-write.csv(CR1,"chemreact1.csv")
+# Withhold validation points from dataet
+data_training <- data[1:13,]
+```
+
+Let's try it with our previous data set:
+```{r generate RSM model for cycle 4}
+rsm4 <- rsm(voltage_cycle_4 ~ SO(temp, acetate), data = data_training)
+summary(rsm4)
+```
+Let's try visualizing these results.
+```{r voltage_cycle_4}
+persp(rsm4, ~ temp + acetate, col = rainbow(50), contours = "colors")
+contour(rsm4, ~ temp + acetate, col = rainbow(50), contours = "colors")
+
+
+packages(ggplot2)
+packages(ggthemes)
+packages(cowplot)
+plot_acetate <- ggplot(data_training, aes(acetate, voltage_cycle_4)) + geom_point() + theme_few()
+plot_temp <- ggplot(data_training, aes(temp, voltage_cycle_4)) + geom_point() + theme_few() 
+plot_grid(plot_acetate, plot_temp, align='h', labels=c('a', 'b'))
+```
+Note that we could also plot this with other packages using plot.it=false
+Now let's try this with our most recent data set.
+```{r voltage_cycle_5}
+rsm5 <- rsm(voltage_cycle_5 ~ SO(temp, acetate), data = data_training)
+summary(rsm5)
+persp(rsm5, ~ temp + acetate, col = rainbow(50), contours = "colors")
+contour(rsm5, ~ temp + acetate, col = rainbow(50), contours = "colors")
+
+#Look at slices against each factor
+plot_acetate <- ggplot(data_training, aes(acetate, voltage_cycle_5)) + geom_point() + theme_few()
+plot_temp <- ggplot(data_training, aes(temp, voltage_cycle_5)) + geom_point() + theme_few() 
+plot_grid(plot_acetate, plot_temp, align='h', labels=c('a', 'b'))
+
+```
+Is there a better point in time to analyze this data? Let's run this against multiple time points and find which creates the best model.
+```{r}
+
 ```
 
